tdf#135660 DOCX import: fix OLE icon wrap distance

The text wrap distance (also sometimes called "margin") of
OLE VML icons used to be thrown away when a .docx file is opened.

Change-Id: I79837421470dde5e68e916f87924b170ebf1d734
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/102159
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>